Init work on API possible contact
