# app.py
@@ -5,8 +5,9 @@ import logging
 import connexion
 from flask import request, current_app
 from utils.dispaccer_events import DispatcherMessage
-from app_constant import REGISTRATION_EMAIL, CONFIRMATION_BOOKING
-
+from app_constant import REGISTRATION_EMAIL, CONFIRMATION_BOOKING, NEW_POSITIVE_WAS_IN_RESTAURANT, EMAIL_TO_FRIEND
+from model.restaurant_model import RestaurantsModel
+from model.user_model import UserModel
 
 def confirm_registration():
     """
@@ -44,6 +45,42 @@ def confirm_booking_registration():
     )
     return {"result": "OK"}, 200
 
+def send_possible_covid_contact():
+    """
+    This is the unique method to send the possible covid19 contacts email.
+    :return: the flask response that looks like {"result": "OK"} with status code 200
+    """
+    json_request = request.get_json()
+    current_app.logger.debug("Request with body\n{}".format(json_request))
+
+    # A message to the friends, it take the following paramiters
+    # to_email, date_possible_contact, restaurant_name
+    json_user = json_request["user_positive"]
+    user_positive = UserModel()
+    user_positive.fill_from_json(json_user)
+
+    # A message to the restaurants booking
+    # to_email, to_name, email_user, restaurant_name
+    json_restaurant = json_request["past_restaurants"]
+    restaurants = []
+    for json_rest in json_restaurant:
+        restaurant = RestaurantsModel()
+        restaurant.fill_from_json(json_rest)
+        restaurants.append(restaurant)
+        DispatcherMessage.send_message(NEW_POSITIVE_WAS_IN_RESTAURANT,
+                                       [restaurant.owner_email, restaurant.owner_email,
+                                        str(restaurant.date_booking), restaurant.name])
+
+    # A message to the owner of the restaurants
+    # it take in inputs the following parameter
+    # to_email, to_name, date_possible_contact, restaurant_name
+    # TODO only the list of friend is not enogth, maybe I need to inject this inside the restaurants
+    json_friends = json_request["friends"]
+    for json_friend in json_friends:
+        DispatcherMessage.send_message(EMAIL_TO_FRIEND,
+                                       [json_friend, restaurant.owner_email,
+                                        str(restaurant.date_booking), restaurant.name])
+    return {"result", "OK"}, 200
 
 logging.basicConfig(level=logging.DEBUG)
 app = connexion.App(__name__)
